fixed css bug for overflowing text

--- a/Pellio/wwwroot/css/products.css
+++ b/Pellio/wwwroot/css/products.css
@@ -125,3 +125,23 @@
     width: 40vw;
     height: 15vh;
 }
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.div1 {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.div2 {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.div3 {
+    grid-area: 1 / 4 / 2 / 5;
+}
